@@ -1,10 +1,13 @@
-#!/usr/bin/perl
+#!@@PERL@@
 #
 # $Id$
 #
 # Copyright 2003-2004 - Per Andreas Buer
 #
 # $Log$
+# Revision 1.7  2004/09/08 15:25:33  ilmari
+# Use @@PERL@@ in all perl shebang lines.
+#
 # Revision 1.6  2004/05/20 13:57:12  jimmyo
 # Set categories to some of the plugins.
 #
